doc: Improve examples

--- a/examples/multiple.ipynb
+++ b/examples/multiple.ipynb
@@ -55,25 +55,26 @@
    "source": [
     "capture_time = timedelta(microseconds=120)\n",
     "\n",
-    "# Capture data from two scopes at the same time, by changing the trigger\n",
-    "# Bit 0 on scope1 is connected to TRIGGER_OUT on scope2\n",
+    "# Capture data from two FleaScopes simultaneously by trigger forwarding\n",
+    "# TRIGGER_OUT on scope2 is connected to Bit 0 on scope1 via a wire.\n",
+    "# scope1 is set to start capturing when Bit 0 goes high.\n",
     "\n",
-    "def get_df1():\n",
+    "def capture_scope1():\n",
     "    return scope1.probe1.read(\n",
     "            capture_time,\n",
     "            DigitalTrigger.start_capturing_when().bit0(BitState.HIGH).starts_matching(),\n",
     "    )\n",
     "\n",
-    "def get_df2():\n",
+    "def capture_scope2():\n",
     "    time.sleep(1) # give scope1 time to prepare\n",
     "    return scope2.probe1.read(\n",
     "        capture_time,\n",
-    "        AnalogTrigger.start_capturing_when().auto(2),\n",
+    "        AnalogTrigger.start_capturing_when().auto(volts=2),\n",
     "    )\n",
     "\n",
     "with ThreadPoolExecutor(max_workers=3) as executor:\n",
-    "    f1 = executor.submit(get_df1)\n",
-    "    f2 = executor.submit(get_df2)\n",
+    "    f1 = executor.submit(capture_scope1)\n",
+    "    f2 = executor.submit(capture_scope2)\n",
     "    df1 = f1.result()\n",
     "    df2 = f2.result()\n",
     "\n",
