--- a/examples/single.ipynb
+++ b/examples/single.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "756e536b-8b74-4fec-a855-a15b580a226c",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
    "source": [
     "df = scope.probe1.read(\n",
     "            timedelta(milliseconds=20),\n",
-    "            AnalogTrigger.start_capturing_when().auto(2),\n",
+    "            trigger=AnalogTrigger.start_capturing_when().auto(volts=2),\n",
     "            delay=timedelta(milliseconds=9),\n",
     ")\n",
     "\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f7104931-871d-461f-99dc-b826076509c0",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
    "source": [
     "df = scope.probe1.read(\n",
     "            timedelta(milliseconds=20),\n",
-    "            DigitalTrigger.start_capturing_when()\n",
+    "            trigger=DigitalTrigger.start_capturing_when()\n",
     "              .bit0(BitState.HIGH)\n",
     "              .bit1(BitState.HIGH)\n",
     "              .starts_matching(),\n",
