--- a/examples/single.ipynb
+++ b/examples/single.ipynb
@@ -16,12 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7fdcc8b7-68a6-4869-a32f-b628e0f25e9f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scope = FleaScope('/dev/ttyACM0', 115200)"
+    "scope = FleaScope('scope1', baud=115200)"
    ]
   },
   {
