ref!: Factor out connecting logic

--- a/examples/single.ipynb
+++ b/examples/single.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scope = FleaScope('scope1', baud=115200)"
+    "scope = FleaScope.connect('scope1', baud=115200)"
    ]
   },
   {
