--- a/examples/multiple.ipynb
+++ b/examples/multiple.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scope1 = FleaScope('scope1', baud=115200)"
+    "scope1 = FleaScope.connect('scope1', baud=115200)"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scope2 = FleaScope('scope2', baud=115200)"
+    "scope2 = FleaScope.connect('scope2', baud=115200)"
    ]
   },
   {
