ref!: Rename probeN to xX

--- a/examples/multiple.ipynb
+++ b/examples/multiple.ipynb
@@ -60,14 +60,14 @@
     "# scope1 is set to start capturing when Bit 0 goes high.\n",
     "\n",
     "def capture_scope1():\n",
-    "    return scope1.probe1.read(\n",
+    "    return scope1.x1.read(\n",
     "            capture_time,\n",
     "            DigitalTrigger.start_capturing_when().bit0(BitState.HIGH).starts_matching(),\n",
     "    )\n",
     "\n",
     "def capture_scope2():\n",
     "    time.sleep(1) # give scope1 time to prepare\n",
-    "    return scope2.probe1.read(\n",
+    "    return scope2.x1.read(\n",
     "        capture_time,\n",
     "        AnalogTrigger.start_capturing_when().auto(volts=2),\n",
     "    )\n",
