--- a/examples/single.ipynb
+++ b/examples/single.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "df = scope.probe1.read(\n",
+    "df = scope.x1.read(\n",
     "            timedelta(milliseconds=20),\n",
     "            trigger=AnalogTrigger.start_capturing_when().auto(volts=2),\n",
     "            delay=timedelta(milliseconds=9),\n",
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "df = scope.probe1.read(\n",
+    "df = scope.x1.read(\n",
     "            timedelta(milliseconds=20),\n",
     "            trigger=DigitalTrigger.start_capturing_when()\n",
     "              .bit0(BitState.HIGH)\n",
